fix(cf): update URL based on deployment
- forget to use env variable

--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -12,7 +12,7 @@
     <meta name="generator" content="Zola" />
     <link
         rel="canonical"
-        href="{{ config.extra.base_url | safe }}{{ current_path | default(value='/') | safe }}"
+        href="{{ current_url | default(value=config.base_url) | safe }}"
     />
 
     <title>
