fix(opengraph): use correct image to represent site
Leftover from Duckquill theme.

--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -86,6 +86,6 @@
         property="og:description"
         content="{{ page.description | default(value=config.description) }}"
     />
-    <meta property="og:image" content="{{ get_url(path='card.png') }}" />
+    <meta property="og:image" content="{{ get_url(path='imgs/2024-lynx-og-image.webp') }}" />
     <meta property="twitter:card" content="summary_large_image" />
 </head>
