--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -86,6 +86,9 @@
         property="og:description"
         content="{{ page.description | default(value=config.description) }}"
     />
-    <meta property="og:image" content="{{ get_url(path='imgs/2024-lynx-og-image.webp') }}" />
+    <meta
+        property="og:image"
+        content="{{ get_url(path='imgs/2024-lynx-og-image.webp') }}"
+    />
     <meta property="twitter:card" content="summary_large_image" />
 </head>
