site(macbook): new laptop and macos fixes
- Old help didn't work on MacOS, new one is a lot simpler built but
manual

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -31,5 +31,5 @@
 
 /* Keep correct aspect ratio after adding image dimensions. Source: https://jampack.divriots.com/configuration/ */
 :where(img) {
-    height: auto
+    height: auto;
 }
